# bloxide

./: .gitignore  AGENTS.md  BLOXIDE_CLI_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DECLARATIVE_PLAN.md  FIX_PLAN.md  LIFECYCLE_FIX_PLAN.md  MACRO_CLEANUP_PLAN.md  PROGRESS.md  QUICK_REFERENCE.md  README.md  REVIEW_FEEDBACK_PLAN.md  START_HERE.md  STATIC_IMAGE_GENERATOR_PLAN.md  SUPERVISOR_OWNED_SPAWNING_PLAN.md
.github/workflows/: lint-and-test.yml
.hermes/: channel_directory.json
.hermes/cron/: ticker_heartbeat  ticker_last_success
apps/embassy-demo/: Cargo.toml  system.toml
apps/embassy-demo/src/: main.rs
apps/tokio-demo/: Cargo.toml  system.toml
apps/tokio-demo/src/: main.rs
apps/tokio-minimal-demo/: Cargo.toml  system.toml
apps/tokio-minimal-demo/src/: main.rs
apps/tokio-pool-demo/: Cargo.toml  system.toml
apps/tokio-pool-demo/src/: main.rs
bloxide-embassy/: Cargo.toml
bloxide-embassy/src/: lib.rs  runtime.rs
bloxide-tokio/: Cargo.toml
bloxide-tokio/src/: lib.rs  runtime.rs
core/src/: components.rs  lib.rs  merge.rs  messaging.rs  state_machine.rs
crates/blox-viz/: Cargo.toml
crates/blox-viz/fonts/: NOTICE.txt
crates/blox-viz/src/: dot.rs  hsm_flow_node.rs  layout.rs  lib.rs  mermaid.rs  raster.rs  snapshot.rs  snapshot_hierarchy.rs  svg.rs
crates/bloxide-child-management/: Cargo.toml
crates/bloxide-child-management/src/: builder.rs  lib.rs
crates/bloxide-core/: Cargo.toml  blox.toml
crates/bloxide-core/src/: accessor.rs  actor.rs  capability.rs  child_management.rs  engine.rs  event_tag.rs  lib.rs  lifecycle.rs  mailboxes.rs  messaging.rs  prelude.rs  spawn.rs  spec.rs  supervision.rs  test_utils.rs  topology.rs  tracing.rs  transition.rs
crates/bloxide-core/src/tests/: fixture.rs  lifecycle_dispatch.rs  mod.rs
crates/bloxide-log/: Cargo.toml
crates/bloxide-log/src/: lib.rs  prelude.rs
crates/bloxide-macros/: Cargo.toml
crates/bloxide-macros/docs/: context-conventions.md  delegatable-generic-limitation.md
crates/bloxide-macros/src/: blox_ctx.rs  blox_event.rs  blox_event_new.rs  blox_mailboxes.rs  blox_messages.rs  channels.rs  delegatable.rs  dyn_channels.rs  event_tag.rs  lib.rs  mailboxes_impls.rs  state_topology.rs  transitions.rs
crates/bloxide-macros/src/blox_ctx/: analyze.rs  generate.rs  mod.rs
crates/bloxide-macros/tests/: blox_ctx_factory.rs  delegatable.rs  transitions_or_pattern.rs
crates/bloxide-messaging/: Cargo.toml
crates/bloxide-messaging/src/: lib.rs
crates/bloxide-peers/: Cargo.toml
crates/bloxide-peers/src/: lib.rs
crates/bloxide-spawn/: Cargo.toml
crates/bloxide-spawn/src/: capability.rs  factory.rs  lib.rs  output.rs  peer.rs  prelude.rs  test_impl.rs
crates/bloxide-spawn/src/tests/: mod.rs  spawn_test.rs
crates/bloxide-supervisor/: Cargo.toml  blox.toml
crates/bloxide-supervisor-actions/: Cargo.toml
crates/bloxide-supervisor-actions/src/: lib.rs  lifecycle.rs  spawn.rs
crates/bloxide-supervisor-context/: Cargo.toml
crates/bloxide-supervisor-context/src/: control.rs  event.rs  lib.rs  registry.rs  spawn.rs
crates/bloxide-supervisor/src/: actions.rs  control.rs  ctx_impls.rs  dynamic_mailboxes.rs  event.rs  lib.rs  lifecycle.rs  prelude.rs  registry.rs  service.rs  spawn.rs  supervisor.rs  tests.rs
crates/bloxide-timer/: Cargo.toml
crates/bloxide-timer/src/: actions.rs  command.rs  lib.rs  prelude.rs  queue.rs  service.rs  test_utils.rs
examples/: bhsm-tst-demo.rs  embassy-demo.rs  embassy-demo.sh  setup-bhsm-tst.sh  tokio-demo.rs  tokio-demo.sh  tokio-minimal-demo.rs  tokio-minimal-demo.sh  tokio-pool-demo.rs  tokio-pool-demo.sh
examples/common/: mod.rs
examples/demo-embassy/: main.rs
examples/embassy-demo/: Cargo.toml
examples/embassy-demo-impl/: Cargo.toml
examples/embassy-demo-impl/src/: lib.rs  prelude.rs
examples/embassy-demo/src/: main.rs
examples/tokio-demo/: Cargo.toml
examples/tokio-demo/src/: main.rs
examples/tokio-pool-demo/: Cargo.toml
examples/tokio-pool-demo/src/: main.rs
examples/wasm-minimal-demo/: Cargo.toml  Dioxus.toml  README.md
examples/wasm-minimal-demo/src/: layer5.rs  main.rs
footprints/: manifest.json
integrations/bloxide-dioxus/: Cargo.toml  README.md
integrations/bloxide-dioxus/src/: lib.rs
integrations/bloxide-wasm-example/: Cargo.toml  README.md
integrations/bloxide-wasm-example/js/: worker_bootstrap.mjs
integrations/bloxide-wasm-example/src/: lib.rs
notes/: blox-viz-improvements-2025-03-25.md
runtimes/bloxide-embassy/: Cargo.toml
runtimes/bloxide-embassy/src/: channel.rs  lib.rs  mailbox.rs  prelude.rs  supervision.rs  timer.rs
runtimes/bloxide-test-runtime/: Cargo.toml
runtimes/bloxide-test-runtime/src/: lib.rs
runtimes/bloxide-tokio/: Cargo.toml
runtimes/bloxide-tokio/src/: channel.rs  erased_reply.rs  kill.rs  lib.rs  mailbox.rs  prelude.rs  spawn.rs  supervision.rs  timer.rs
runtimes/bloxide-wasm/: Cargo.toml  README.md
runtimes/bloxide-wasm/src/: channel.rs  lib.rs  mailbox.rs  prelude.rs  spawn.rs  timer.rs
scripts/: bhsm-tst-demo.sh  ci.sh
skills/building-with-bloxide/: SKILL.md  reference.md
skills/contributing-to-bloxide/: SKILL.md
spec/: README.md  implementation-plan-consistency-audit.md
spec/architecture/: 00-layered-architecture.md  01-system-architecture.md  02-hsm-engine.md  03-actor-messaging.md  04-static-wiring.md  05-handler-patterns.md  06-actions.md  07-typed-mailboxes.md  08-supervision.md  09-application.md  10-action-crate-pattern.md  10-effects-and-capabilities.md  11-dynamic-actors.md  12-action-crate-pattern.md  13-factory-injection-and-supervision.md  14-unified-lifecycle.md  15-composable-context-crates.md  15-supervisor-owned-spawning.md  16-declarative-wiring.md  16-spawn-service.md  17-blox-toml-source-of-truth.md  17-spawn-cap-design.md  18-composable-context-crates.md  18-spawn-architecture.md  19-cli-design.md  19-declarative-wiring.md  20-blox-toml-source-of-truth.md  (+2 more)
src/: lib.rs  macros.rs
tools/bloxide-visualizer/: Cargo.toml  Dioxus.toml  serve.sh
tools/bloxide-visualizer/src/: data.rs  main.rs  model.rs  parser.rs
(+243 files in other folders)
