# Copyright 2025 Bloxide, all rights reserved
[package]
name = "bloxide"
version.workspace = true
edition.workspace = true
publish = false
description = "Workspace host crate for bloxide apps and tools"

[workspace]
members = [
    "crates/bloxide-core",
    "crates/bloxide-log",
    "crates/bloxide-macros",
    "crates/bloxide-child-management",
    "crates/bloxide-spawn",
    "crates/bloxide-supervisor",
    "crates/bloxide-peers",
    "crates/bloxide-timer",
    "crates/bloxide-messaging",
    "runtimes/bloxide-embassy",
    "runtimes/bloxide-tokio",
    "runtimes/bloxide-test-runtime",
    "crates/actions/ping-pong-actions",
    "crates/actions/pool-actions",
    "crates/actions/counter-actions",
    "crates/actions/bhsm-tst-actions",
    "crates/context/blox-ctx-workers",
    "crates/context/blox-ctx-pool-ref",
    "crates/context/blox-ctx-rounds",
    "crates/context/blox-ctx-current-timer",
    "crates/context/blox-ctx-current-task",
    "crates/context/blox-ctx-worker-peers",
    "crates/context/blox-ctx-ticks",
    "crates/messages/ping-pong-messages",
    "crates/messages/pool-messages",
    "crates/messages/counter-messages",
    "crates/messages/bhsm-tst-messages",
    "crates/bloxes/ping",
    "crates/bloxes/pong",
    "crates/bloxes/worker",
    "crates/bloxes/pool",
    "crates/bloxes/counter",
    "crates/bloxes/bhsm-tst",
    "crates/impl/embassy-demo-impl",
    "crates/impl/counter-demo-impl",
    "crates/impl/tokio-pool-demo-impl",
    "crates/tools/bloxide-codegen",
    "crates/tools/cargo-blox",
    "tools/bloxide-viz-export",
    "apps/tokio-demo",
    "apps/tokio-minimal-demo",
    "apps/tokio-pool-demo",
    "apps/embassy-demo",
]
resolver = "2"

[workspace.package]
version = "0.0.3"
edition = "2021"
repository = "https://github.com/bloxide-com/bloxide"
license = "MIT"
readme = "README.md"
authors = ["Bloxide Contributors"]
keywords = ["actor", "hsm", "state-machine", "embedded", "no_std", "async"]
categories = ["embedded", "no-std", "asynchronous", "rust-patterns"]

[workspace.dependencies]
bloxide-core = { path = "crates/bloxide-core" }
bloxide-log = { path = "crates/bloxide-log" }
bloxide-macros = { path = "crates/bloxide-macros" }
bloxide-child-management = { path = "crates/bloxide-child-management" }
bloxide-spawn = { path = "crates/bloxide-spawn" }
bloxide-supervisor = { path = "crates/bloxide-supervisor" }
bloxide-peers = { path = "crates/bloxide-peers" }
bloxide-timer = { path = "crates/bloxide-timer" }
bloxide-messaging = { path = "crates/bloxide-messaging" }
bloxide-embassy = { path = "runtimes/bloxide-embassy" }
bloxide-tokio = { path = "runtimes/bloxide-tokio" }
bloxide-test-runtime = { path = "runtimes/bloxide-test-runtime" }
ping-pong-actions = { path = "crates/actions/ping-pong-actions" }
pool-actions = { path = "crates/actions/pool-actions" }
counter-actions = { path = "crates/actions/counter-actions" }
bhsm-tst-actions = { path = "crates/actions/bhsm-tst-actions" }
blox-ctx-workers = { path = "crates/context/blox-ctx-workers" }
blox-ctx-pool-ref = { path = "crates/context/blox-ctx-pool-ref" }
blox-ctx-rounds = { path = "crates/context/blox-ctx-rounds" }
blox-ctx-current-timer = { path = "crates/context/blox-ctx-current-timer" }
blox-ctx-current-task = { path = "crates/context/blox-ctx-current-task" }
blox-ctx-worker-peers = { path = "crates/context/blox-ctx-worker-peers" }
blox-ctx-ticks = { path = "crates/context/blox-ctx-ticks" }
ping-pong-messages = { path = "crates/messages/ping-pong-messages" }
pool-messages = { path = "crates/messages/pool-messages" }
counter-messages = { path = "crates/messages/counter-messages" }
bhsm-tst-messages = { path = "crates/messages/bhsm-tst-messages" }
ping-blox = { path = "crates/bloxes/ping" }
pong-blox = { path = "crates/bloxes/pong" }
worker-blox = { path = "crates/bloxes/worker" }
pool-blox = { path = "crates/bloxes/pool" }
counter-blox = { path = "crates/bloxes/counter" }
bhsm-tst-blox = { path = "crates/bloxes/bhsm-tst" }
embassy-demo-impl = { path = "crates/impl/embassy-demo-impl" }
counter-demo-impl = { path = "crates/impl/counter-demo-impl" }
tokio-pool-demo-impl = { path = "crates/impl/tokio-pool-demo-impl" }
bloxide-codegen = { path = "crates/tools/bloxide-codegen" }
cargo-blox = { path = "crates/tools/cargo-blox" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
static_cell = "2"

[dev-dependencies]
bloxide-core = { workspace = true, features = ["std", "tracing"] }
bloxide-embassy = { workspace = true, features = ["std"] }
bloxide-tokio = { workspace = true }
bloxide-log = { workspace = true, features = ["log"] }
bloxide-timer = { workspace = true, features = ["std"] }
ping-blox = { workspace = true }
pong-blox = { workspace = true }
pool-blox = { workspace = true, features = ["std"] }
counter-blox = { workspace = true }
bhsm-tst-blox = { workspace = true }
bhsm-tst-messages = { workspace = true }
ping-pong-messages = { workspace = true }
pool-messages = { workspace = true }
counter-messages = { workspace = true }
embassy-demo-impl = { workspace = true }
counter-demo-impl = { workspace = true }
tokio-pool-demo-impl = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
embassy-executor = { version = "0.9", features = ["arch-std", "executor-thread"] }
embassy-sync = { version = "0.7" }
embassy-time = { version = "0.5", features = ["std", "generic-queue-8"] }
critical-section = { version = "1.2", features = ["std"] }
static_cell = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
