[package]
name = "bloxide-embassy"
version.workspace = true
edition.workspace = true

[dependencies]
bloxide-core = { path = "../core", features = ["runtime-embassy"] }
log = { version = "0.4.22", default-features = false }
env_logger = { version = "0.11.6" }
embassy-sync = { version = "0.6.1" }
embassy-executor = { version = "0.6.3" }
embassy-futures = "0.1.1"
