# Copyright 2025 Bloxide, all rights reserved
[package]
name = "embassy-demo"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
bloxide-core       = { workspace = true, features = ["std"] }
bloxide-embassy    = { workspace = true, features = ["std"] }
bloxide-log        = { workspace = true, features = ["log"] }
bloxide-timer      = { workspace = true, features = ["std"] }
bloxide-supervisor = { workspace = true, features = ["std"] }
ping-blox          = { workspace = true }
pong-blox          = { workspace = true }
ping-pong-messages = { workspace = true }
ping-pong-actions  = { workspace = true }
ping-pong-impl     = { workspace = true }
embassy-executor   = { version = "0.9", features = ["arch-std", "executor-thread"] }
embassy-sync       = { version = "0.7" }
embassy-time       = { version = "0.5", features = ["std", "generic-queue-8"] }
critical-section   = { version = "1.2", features = ["std"] }
static_cell        = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log        = { workspace = true }
