# Copyright 2025 Bloxide, all rights reserved
[package]
name = "tokio-demo"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
bloxide-core       = { workspace = true, features = ["std"] }
bloxide-tokio      = { workspace = true }
bloxide-log        = { workspace = true, features = ["log"] }
bloxide-timer      = { workspace = true, features = ["std"] }
bloxide-supervisor = { workspace = true, features = ["std"] }
ping-blox          = { workspace = true }
pong-blox          = { workspace = true }
ping-pong-messages = { workspace = true }
ping-pong-actions  = { workspace = true }
embassy-demo-impl  = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log        = { workspace = true }

[features]
dynamic = ["bloxide-supervisor/dynamic"]
default = ["dynamic"]
