# Copyright 2025 Bloxide, all rights reserved
[package]
name = "tokio-pool-demo"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
bloxide-core       = { workspace = true, features = ["std"] }
bloxide-tokio      = { workspace = true }
bloxide-log        = { workspace = true, features = ["log"] }
bloxide-supervisor = { workspace = true, features = ["std"] }
pool-blox          = { workspace = true }
pool-messages      = { workspace = true }
pool-actions       = { workspace = true }
worker-blox        = { workspace = true }
tokio-pool-demo-impl = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log        = { workspace = true }
