[package]
name = "bloxide-macros"
version.workspace = true
edition.workspace = true
description = "Procedural macros for bloxide — #[derive(BloxCtx)], #[derive(StateTopology)], #[blox_event], transitions!"

[lib]
proc-macro = true

[dependencies]
syn  = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
