# Copyright 2025 Bloxide, all rights reserved
[package]
name = "bloxide-macros"
version.workspace = true
edition.workspace = true
description = "Procedural macros for bloxide — #[derive(BloxCtx)], transitions!, channels!, dyn_channels!"
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn  = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
bloxide-core = { workspace = true }
