# Copyright 2025 Bloxide, all rights reserved
[package]
name = "bloxide-peers"
version.workspace = true
edition.workspace = true
description = "Peer introduction control messages and helpers for bloxide"
repository.workspace = true
license.workspace = true

[features]
default = ["alloc"]
alloc = ["bloxide-core/alloc"]
std = ["bloxide-core/std", "alloc"]

[dependencies]
bloxide-core = { workspace = true }
