# Copyright 2025 Bloxide, all rights reserved
[package]
name = "bloxide-spawn"
version.workspace = true
edition.workspace = true
description = "Dynamic actor spawning and peer introduction for bloxide"
repository.workspace = true
license.workspace = true

[features]
default = []
std = ["bloxide-core/std"]

[dependencies]
bloxide-core = { workspace = true }
bloxide-macros = { workspace = true }
