# Copyright 2025 Bloxide, all rights reserved
[package]
name = "bloxide-supervisor-actions"
version.workspace = true
edition.workspace = true
description = "Action functions for bloxide supervisor state machine"
repository.workspace = true
license.workspace = true

[features]
default = ["alloc"]
alloc = ["bloxide-core/alloc", "bloxide-supervisor-context/alloc"]
std = ["bloxide-core/std", "bloxide-supervisor-context/std", "alloc"]
dynamic = ["bloxide-supervisor-context/dynamic"]

[dependencies]
bloxide-core = { workspace = true }
bloxide-log = { workspace = true }
bloxide-supervisor-context = { workspace = true }
