# Copyright 2025 Bloxide, all rights reserved
[package]
name = "bloxide-supervisor"
version.workspace = true
edition.workspace = true
description = "OTP-style supervision for bloxide — no_std"
repository.workspace = true
license.workspace = true

[features]
default = ["alloc"]
alloc   = ["bloxide-core/alloc"]
std     = ["bloxide-core/std", "alloc"]

[dependencies]
bloxide-core = { workspace = true }
bloxide-log = { workspace = true }
bloxide-macros = { workspace = true }

[dev-dependencies]
bloxide-core = { workspace = true, features = ["std"] }
