# Copyright 2025 Bloxide, all rights reserved
[package]
name = "bloxide-timer"
version.workspace = true
edition.workspace = true
description = "Timer service for bloxide — messages, queue, actions, and TimerService trait"
repository.workspace = true
license.workspace = true

[features]
default = ["alloc"]
alloc = ["bloxide-core/alloc"]
std = ["bloxide-core/std", "alloc"]

[dependencies]
bloxide-core = { workspace = true }
bloxide-log = { workspace = true }
critical-section = "1.2.0"
