[package]
name = "embassy-demo"
version.workspace = true
edition.workspace = true
description = "Embassy static wiring demo (std target)"

[[bin]]
name = "embassy-demo"
path = "src/main.rs"

[dependencies]
bloxide-core       = { path = "../../crates/bloxide-core", features = ["std", "tracing"] }
bloxide-embassy    = { path = "../../runtimes/bloxide-embassy", features = ["std"] }
bloxide-log        = { path = "../../crates/bloxide-log", features = ["log"] }
bloxide-timer      = { path = "../../crates/bloxide-timer", features = ["alloc"] }
ping-blox          = { path = "../bloxes/ping" }
pong-blox          = { path = "../bloxes/pong" }
ping-pong-messages = { path = "../messages/ping-pong-messages" }
embassy-demo-impl  = { path = "../embassy-demo-impl" }
embassy-executor = { version = "0.9", features = ["arch-std", "executor-thread"] }
embassy-sync = { version = "0.7" }
embassy-time = { version = "0.5", features = ["std", "generic-queue-8"] }
critical-section = { version = "1.2", features = ["std"] }
static_cell = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
