[package]
name = "tokio-demo"
version.workspace = true
edition.workspace = true
description = "Tokio runtime demo (std target)"

[[bin]]
name = "tokio-demo"
path = "src/main.rs"

[dependencies]
bloxide-core       = { path = "../../crates/bloxide-core", features = ["std", "tracing"] }
bloxide-tokio      = { path = "../../runtimes/bloxide-tokio" }
bloxide-log        = { path = "../../crates/bloxide-log", features = ["log"] }
bloxide-timer      = { path = "../../crates/bloxide-timer", features = ["std"] }
ping-blox          = { path = "../bloxes/ping" }
pong-blox          = { path = "../bloxes/pong" }
ping-pong-messages = { path = "../messages/ping-pong-messages" }
embassy-demo-impl  = { path = "../embassy-demo-impl" }
tokio              = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log        = "0.2"
