# Copyright 2025 Bloxide, all rights reserved
[package]
name = "wasm-minimal-demo"
version.workspace = true
edition.workspace = true
publish = false
description = "Minimal browser WASM example: Dioxus + counter blox on bloxide-wasm (main thread)"
repository.workspace = true
license.workspace = true

[dependencies]
dioxus = { workspace = true }
tracing = "0.1"
bloxide-dioxus = { workspace = true }
bloxide-wasm = { workspace = true }
bloxide-core = { workspace = true, features = ["std"] }
bloxide-timer = { workspace = true }
counter-blox = { workspace = true }
counter-demo-impl = { workspace = true }
counter-messages = { workspace = true }
