# Copyright 2025 Bloxide, all rights reserved
[package]
name = "bloxide-dioxus"
version.workspace = true
edition.workspace = true
publish = false
description = "Dioxus component + helpers to spawn a Bloxide WASM worker and send JSON to its MessagePort"
repository.workspace = true
license.workspace = true

[dependencies]
dioxus = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "MessageChannel",
    "MessagePort",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "Window",
] }
