# Copyright 2025 Bloxide, all rights reserved
[package]
name = "bloxide-embassy"
version.workspace = true
edition.workspace = true
description = "Embassy runtime implementation for bloxide"
repository.workspace = true
license.workspace = true

[dependencies]
bloxide-core = { workspace = true, features = ["alloc"] }
bloxide-macros = { workspace = true }
bloxide-supervisor = { workspace = true, features = ["alloc"] }
bloxide-timer = { workspace = true, features = ["alloc"] }
embassy-futures = "0.1"
embassy-sync = { version = "0.7" }
embassy-time = { version = "0.5" }
embassy-executor = { version = "0.9", features = ["executor-thread"] }
futures-core = { version = "0.3", default-features = false }

[features]
std = ["bloxide-core/std", "bloxide-supervisor/std", "bloxide-timer/std"]
