# Copyright 2025 Bloxide, all rights reserved
[package]
name = "bloxide-test-runtime"
version.workspace = true
edition.workspace = true
description = "In-memory TestRuntime for bloxide unit tests — implements BloxRuntime + SpawnCap"
repository.workspace = true
license.workspace = true

[features]
default = ["std"]
std = ["bloxide-core/std", "bloxide-spawn/std", "alloc"]
alloc = ["bloxide-core/alloc", "bloxide-spawn/alloc"]

[dependencies]
bloxide-core = { workspace = true }
bloxide-spawn = { workspace = true }
futures-core = { version = "0.3" }
