# Copyright 2025 Bloxide, all rights reserved
[package]
name = "bloxide-tokio"
version.workspace = true
edition.workspace = true
description = "Tokio runtime implementation for bloxide"
repository.workspace = true
license.workspace = true

[dependencies]
bloxide-core = { workspace = true, features = ["std"] }
bloxide-macros = { workspace = true }
bloxide-spawn = { workspace = true, features = ["std"] }
bloxide-supervisor = { workspace = true, features = ["std"] }
bloxide-timer = { workspace = true, features = ["std"] }
futures-core = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
