# Copyright 2025 Bloxide, all rights reserved
[package]
name = "bloxide-visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7.6", features = ["fullstack"] }
dioxus-fullstack = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.12"

# Server-only dependencies for workspace scanning
bloxide-viz-export = { path = "../bloxide-viz-export", optional = true }

[features]
web = ["dioxus/web"]
server = ["dioxus/server", "dep:bloxide-viz-export"]

[workspace]
